--- a/sdl2-net.cabal
+++ b/sdl2-net.cabal
@@ -17,10 +17,12 @@ cabal-version:          >=1.10
 library
   hs-source-dirs:       src
   exposed-modules:      SDL.Raw.Net
-  extra-libraries:      SDL2
-  pkgconfig-depends:    sdl2 >= 2.0.3, SDL2_net
+  extra-libraries:      SDL2, SDL_net
+  pkgconfig-depends:    sdl2 >= 2.0.3, SDL_net
   build-depends:        base >= 4.7 && < 5,
-                        sdl2
+                        sdl2,
+                        transformers
+  --ghc-options:          -lSDL_net
   default-language:     Haskell2010
 
 test-suite sdl2-net-test
@@ -29,6 +31,7 @@ test-suite sdl2-net-test
   main-is:              Spec.hs
   build-depends:        base,
                         hspec,
+                        hspec-expectations,
                         QuickCheck,
                         sdl2-net
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
