--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - sudo apt-get update && sudo apt-get install stack -y
     - wget http://www.libsdl.org/release/SDL2-2.0.3.tar.gz -O - | tar xz
     - cd SDL2-2.0.3 && ./configure && make -j && sudo make install && cd ..
-    - wget http://www.libsdl.org/projects/SDL_net/release/SDL2_net-2.0.0.tar.gz" -O - | tar xz
+    - wget http://www.libsdl.org/projects/SDL_net/release/SDL2_net-2.0.0.tar.gz -O - | tar xz
     - cd SDL2_net-2.0.0 && ./configure -j && sudo make install && cd ..
   override:
     - stack setup
