--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
     - wget http://www.libsdl.org/release/SDL2-2.0.3.tar.gz -O - | tar xz
     - cd SDL2-2.0.3 && ./configure && make -j && sudo make install && cd ..
     - wget http://www.libsdl.org/projects/SDL_net/release/SDL2_net-2.0.0.tar.gz -O - | tar xz
-    - cd SDL2_net-2.0.0 && ./configure -j && sudo make install && cd ..
+    - cd SDL2_net-2.0.0 && ./configure && sudo make install && cd ..
   override:
     - stack setup
     - stack build
