--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   ghc:
     version: 7.10.1
+  environment:
+    LD_LIBRARY_PATH: /usr/local/lib
 
 dependencies:
   cache_directories:
@@ -12,7 +14,7 @@ dependencies:
     - wget http://www.libsdl.org/release/SDL2-2.0.3.tar.gz -O - | tar xz
     - cd SDL2-2.0.3 && ./configure && make -j && sudo make install && cd ..
     - wget http://www.libsdl.org/projects/SDL_net/release/SDL2_net-2.0.0.tar.gz -O - | tar xz
-    - cd SDL2_net-2.0.0 && ./configure && sudo make install && cd ..
+    - cd SDL2_net-2.0.0 && ./configure && make && sudo make install && cd ..
   override:
     - stack setup
     - stack build
